--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 		<link rel="preconnect" href="https://fonts.googleapis.com">
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 		<link href="https://fonts.googleapis.com/css2?family=Bruno+Ace+SC&family=Orbitron:wght@400..900&display=swap" rel="stylesheet">
-		<script type="text/javascript" src="index.js"></script>
+		
 		<link rel="icon" type="image/x-icon" href="favicon.ico">
 		<style>
 			.box-a {
@@ -92,30 +92,10 @@
 		</style>
 	</head>
 	<body>
-			<div class="all-boxes">
+			<div id='holds-all-boxes' class="all-boxes">
 				  <div class="box-b">
 					<h1 class="name-b">Name</h1>  
 				    <h1 class="points-b">Current Points</h1>
-			      </div>
-				  <div class="first">
-					<h1 class="name-a">🥇 Noraaaaaaaa #1 Rise fan </h1>  
-				    <h1 class="points-a">510</h1>
-			      </div>
-				  <div class="second">
-					<h1 class="name-a">🥈 Vivociraptor</h1>  
-				    <h1 class="points-a">19.5</h1>
-			      </div>
-				  <div class="third">
-					<h1 class="name-a">🥉 puzzles</h1>  
-				    <h1 class="points-a">17.5</h1>
-			      </div>
-				  <div class="box-a">
-					<h1 class="name-a">LoganRobo</h1>  
-				    <h1 class="points-a">7.625</h1>
-			      </div>
-				  <div class="box-a">
-					<h1 class="name-a">HonestMagpie</h1>  
-				    <h1 class="points-a">3.25</h1>
 			      </div>
 			</div>
 
@@ -126,4 +106,5 @@
 			</div>
 			
 	</body>
+	<script type="text/javascript" src="index.js"></script>
 </html> 
