add percent text

--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
 			<div id='holds-all-boxes' class="all-boxes">
 				  <div class="box-b">
 					<h1 class="name-b">Name</h1>  
-				    <h1 class="points-b">Current Points</h1>
+				    <h1 class="points-b">Current Points | Current Percentage </h1>
 			      </div>
 			</div>
 
